# album

./: .prettierignore  .prettierrc.cjs  README.md  index.html  install.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: release.mjs  updater.mjs
src/: App.vue  index.css  index.js  router.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  file.rs  image.rs  main.rs
src-tauri/src/infra/: README.md  error.rs
src-tauri/src/port/: README.md  album.rs  mod.rs
src-tauri/src/service/: file.rs  image.rs  mod.rs
src/assets/images/: 未确认 824095.crdownload
src/components/waterfall/: Waterfall.vue  index.ts  waterfall.ts
src/services/: dialog-service.ts  image-service.ts
src/views/empty/: Empty.vue  index.ts
src/views/image/: Image.vue  index.ts
