[package]
name = "rui-album"
version = "1.0.0"
description = "一款图片查看器"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with= { version = "2.0.1", features = ["json"] }
serde_with_macros = "2"
tauri = { version = "1.1", features = ["api-all", "updater"] }
# sqlite = "0.27.3"
# ts-rs = { version = "6", features = ["format"] }
# tokio = { version = "1.21.2", features = ["full"] }
thiserror = "1"
glob= "0.3.0"
imagesize="0.10.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
